<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_auto_perception_rviz_plugin</name>
  <version>1.0.0</version>
  <description>Contains plugins to visualize object detection outputs</description>
  <maintainer email="opensource@apex.ai">Apex.AI, Inc.</maintainer>
  <maintainer email="satoshi.tanaka@tier4.jp">Satoshi Tanaka</maintainer>
  <maintainer email="taiki.tanaka@tier4.jp">Taiki Tanaka</maintainer>
  <maintainer email="takeshi.miura@tier4.jp">Takeshi Miura</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <build_depend>libboost-dev</build_depend>
  <build_depend>qtbase5-dev</build_depend>

  <depend>autoware_auto_perception_msgs</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>

  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
