<?xml version="1.0"?>
<package format="3">
  <name>autoware_debug_tools</name>
  <version>0.1.0</version>
  <description>The autoware_debug_tools package</description>
  <maintainer email="kenji.miyake@tier4.jp">Kenji Miyake</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_debug_msgs</depend>
  <depend>autoware_utils</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2_ros</depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rtree</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
