<?xml version="1.0"?>
<package format="3">

  <name>autoware_localization_rviz_plugin</name>
  <version>0.1.0</version>
  <description>The autoware_localization_rviz_plugin package</description>
  <license>Apache License 2.0</license>

  <maintainer email="isamu.takagi@tier4.jp">Isamu Takagi</maintainer>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>qtbase5-dev</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugins/plugin_description.xml"/>
  </export>

</package>
